third_party/move/move-compiler-v2/tests/ability-check/explicit_move.exp

Diagnostics:
error: local `x` of type `m::R` does not have the `copy` ability
   ┌─ tests/ability-check/explicit_move.move:12:9
   │
12 │         some(x);
   │         ^^^^^^^ copy needed here because value is still used
13 │         some(x);
   │         ------- used here

error: cannot move local `r` since it is still used
   ┌─ tests/ability-check/explicit_move.move:18:17
   │
18 │         let x = move r; // expected to fail
   │                 ^^^^^^ attempted to move here
19 │         some(x);
20 │         some(r);
   │         ------- used here
